2013-01-04  Yufeng Zhang  <yufeng.zhang@arm.com>

        * gas/aarch64/system.d: Update.

2013-01-02  Nick Clifton  <nickc@redhat.com>

	PR gas/14987
	* gas/arm/neon-ldst-es.s: Add whitespace test.
	* gas/arm/neon-ldst-es.d: Update expected disassembly.

For older changes see ChangeLog-2012

Copyright (C) 2013 Free Software Foundation, Inc.

Copying and distribution of this file, with or without modification,
are permitted in any medium without royalty provided the copyright
notice and this notice are preserved.

Local Variables:
mode: change-log
left-margin: 8
fill-column: 74
version-control: never
End: