@@ -1,6 +1,12 @@
 2013-01-04  Yufeng Zhang  <yufeng.zhang@arm.com>
 
-        * gas/aarch64/system.d: Update.
+	* gas/aarch64/int-insns.d: Update.
+	* gas/aarch64/mov.d: Update.
+	* gas/aarch64/reloc-insn.d: Update.
+
+2013-01-04  Yufeng Zhang  <yufeng.zhang@arm.com>
+
+	* gas/aarch64/system.d: Update.
 
 2013-01-02  Nick Clifton  <nickc@redhat.com>
 
